--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>HOLA MUNDO</h1>
+    <p>rama 2</p>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+    <p>cambio intermedio rama 3</p>
     <h2>My First Heading</h2>
     <p>My first paragraph.</p>
 </body>
