cambio intermedio antes de comit hecho

--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
     <h2>My First Heading</h2>
     <p>My first paragraph.</p>
 </body>
+    <!-- cambio antes de subir un comit ya hecho-->
 </html>
